[package]
name = "ratatui-textarea"
version = "0.3.1"
edition = "2021"
rust-version = "1.56.1"
authors = ["Awiteb <awiteb@hotmail.com>", "rhysd <lin90162@yahoo.co.jp>"]
description = """
ratatui is a simple yet powerful text editor widget for ratatui. Multi-line
text editor can be easily put as part of your ratatui application. Forked from ratatui-textarea.
"""
license = "MIT"
homepage = "https://github.com/TheAwiteb/ratatui-textarea"
repository = "https://github.com/TheAwiteb/ratatui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "ratatui", "textarea", "editor", "input"]
include = ["/src", "/examples", "/README.md", "/LICENSE.txt"]

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
your-backend = ["ratatui"]
# Other optional features
search = ["dep:regex"]

[dependencies]
crossterm = { package = "crossterm", version = "0.27", optional = true }
regex = { version = "1", optional = true }
termion = { version = "2.0.1", optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }
ratatui = { version = "0.23", default-features = false, optional = true }

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "editor"
required-features = ["crossterm", "search"]

[[example]]
name = "split"
required-features = ["crossterm"]

[[example]]
name = "single_line"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[[example]]
name = "modal"
required-features = ["crossterm"]

[workspace]
members = ["bench"]

[profile.bench]
lto = "thin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
